📖 change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-composition-api-tsx-example",
+  "name": "tsx-vue-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
