--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/vue-router": "^2.0.0",
     "@vue/composition-api": "^0.3.2",
     "core-js": "^2.6.5",
+    "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
@@ -17,6 +18,7 @@
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "babel-plugin-import": "^1.12.2",
     "babel-preset-vca-jsx": "^0.1.0",
     "typescript": "^3.5.2",
     "vue-template-compiler": "^2.6.10"
